# tdd_django_site

./: pyproject.toml  pytest.ini
films_and_serials/: manage.py
films_and_serials/films_and_serials/: asgi.py  settings.py  urls.py  wsgi.py
films_and_serials/functional_tests/: .gitignore  test_registration.py  test_site.py
films_and_serials/module_tests/: registration_test.py  test_models.py  tests.py
films_and_serials/myapp/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
films_and_serials/myapp/migrations/: 0001_initial.py
films_and_serials/myapp/templates/: base_generic.html  films.html  home.html  register.html  serials.html  watch_film.html  watch_serial.html
