[tool.poetry]
name = "django-serial-site"
version = "0.1.0"
description = ""
authors = ["emmanuil <emmanuilya@gmail.com>"]
readme = "README.md"
packages = [{include = "django_serial_site"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
pytest = "^7.3.1"
selenium = "^4.9.1"
pytest-django = "^4.5.2"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
